2013-01-17  Jack Howarth <howarth@bromo.med.uc.edu>

	PR sanitizer/55679
	* g++.dg/asan/interception-test-1.C: Skip on darwin.
	* lib/target-supports.exp (check_effective_target_swapcontext): Use
	check_no_compiler_messages to test support in ucontext.h.
	(check_effective_target_setrlimit): Return 0 for Darwin's non-posix
	compliant RLIMIT_AS.

2013-01-10  Kostya Serebryany  <kcc@google.com>

	* g++.dg/asan/asan_test.cc: Sync from upstream.

2013-01-08  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/55844
	* c-c++-common/asan/null-deref-1.c: Add -fno-shrink-wrap to
	dg-options.

2012-12-12  Jakub Jelinek  <jakub@redhat.com>

	* lib/gcc-dg.exp (${tool}_load): Handle non-existing
	set_target_env_var the same as if it is empty list.
	(dg-set-target-env-var): Fix up error message.
	(set-target-env-var): Record both preexisting env var values
	as well as info that env wasn't set.
	(restore-target-env-var): Iterate on reversed list, if second
	sublist element is 1, setenv the env var to the third sublist
	element, otherwise unsetenv it.
	(gcc-dg-runtest): Don't initialize set_target_env_var.
	(dg-test): Unset set_target_env_var if it was set.

	* g++.dg/asan/deep-tail-call-1.C: Whitespace fixes.  Don't rely
	on argc being one.
	* g++.dg/asan/interception-malloc-test-1.C: Only run on linux.
	Whitespace fixes.  Avoid unnecessary * sizeof(char).
	* g++.dg/asan/deep-thread-stack-1.C: Add -lasan -lpthread to
	dg-options.  Whitespace fixes.
	* g++.dg/asan/deep-stack-uaf-1.C: Skip for -flto.  Whitespace fixes.
	* g++.dg/asan/interception-test-1.C: Whitespace fixes.
	* g++.dg/asan/interception-failure-test-1.C: Whitespace fixes.
	Avoid unnecessary * sizeof(char).  Remove // CHECK: comment.
	* g++.dg/asan/default-options-1.C: Whitespace fixes.
	* g++.dg/asan/symbolize-callback-1.C: Whitespace fixes.  Make
	first __asan_symbolize argument unnamed.  Avoid unnecessary
	* sizeof(char).
	* g++.dg/asan/large-func-test-1.C: Whitespace fixes.  Don't rely